# omni-synapse-v2

./: .gitignore  AUDIT_INTEGRITY_REPORT.txt  COMMERCIAL LICENSE TYPES.md  CONTRIBUTING.md  CUM RULEZ.md  Cargo.toml  Cargo_commercial.toml  Cargo_showcase.toml  KORVEX OMNI-SYNAPSE – SHOWCASE LICE.txt  LICENSE_SHOWCASE.txt  METADATA_SEO.txt  RAPORT_FINAL.txt  README.md  RELEASE_NOTES.txt  SEO_MANIFEST.md  SHIP_TO_CLIENT.ps1  TEST_COMPILATION.txt  TEST_PERFORMANCE_AUDIT.txt  TEST_SECURITY_INTEGRITY.txt  _config.yml  deploy.bat  generate_client_token.ps1  generate_license.ps1  index.md  main_commercial.rs  use_commercial.ps1  use_commercial.ps1cm  use_showcase.ps1  use_showcase.ps1 cm
.github/workflows/: audit.yml  deploy-docs.yml
EMITTED_LICENSES/: License_Audit_Verification_2026_2026-01-20_12-00.txt  License_Test_Client_Alpha_2026-01-19_23-23.txt
MARKETING/: CAMPAIGN_TEXTS.txt
MARKETING/ASSETS/: BUILD_BADGE.md  LATENCY_BADGE.md  SECURITY_BADGE.md
RELEASE_KIT/: PERFORMANCE_CERTIFICATE.txt  START_HERE.txt
src/: TEST_COMERCIAL.txt  TEST_VITRINA.txt  cum  rulezi.sh  main.rs  main_commercial.rs  main_showcase.rs
src/audit/: mod.rs
src/auth/: license_gate.rs
src/platform/: mod.rs
src/security/: mod.rs
src/tracking/: mod.rs
src/ultra_core/: mod.rs
