[package]
name = "korvex-omni-synapse"
version = "2.0.0"
edition = "2021"
authors = ["Korvex"]
description = "Ultra-Low Latency Core with HMAC & HWID Licensing"

[dependencies]
# --- CORE ENGINE & NETWORKING ---
actix-web = "4.0"
dashmap = "5.5"
arc-swap = "1.6"

# --- SECURITY & HARD-LOCK ---
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
machine-uid = "0.3"

# --- DATA & SERIALIZATION ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# --- UTILITIES ---
chrono = "0.4"
instant = "0.1"

[profile.release]
opt-level = 3           # Maximizare viteză de execuție
lto = "fat"             # Link Time Optimization agresiv între module
codegen-units = 1       # Optimizează binarul ca o singură unitate
panic = "abort"         # Elimină overhead-ul de unwinding pentru viteză
strip = true            # Șterge simbolurile de debug pentru protecție anti-crack